[gd_scene format=3 uid="uid://d3ypqdmkcewln"]

[ext_resource type="Script" uid="uid://51t3fujgk1em" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]
[ext_resource type="Shader" uid="uid://boqah670cf53d" path="res://assets/shaders/balatro_bg.gdshader" id="2_balatro_bg"]
[ext_resource type="Texture2D" uid="uid://bpygv00xxvy50" path="res://asset_remake/title_menu_color.png" id="4_sjck8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_balatro"]
shader = ExtResource("2_balatro_bg")
shader_parameter/spin_rotation_speed = 0.4
shader_parameter/move_speed = 1.5
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.486, 0.231, 0.871, 1)
shader_parameter/colour_2 = Color(0, 0.702, 0.302, 1)
shader_parameter/colour_3 = Color(0.086, 0.137, 0.145, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.4
shader_parameter/spin_amount = 0.25
shader_parameter/pixel_filter = 550.0
shader_parameter/is_rotating = true

[node name="MainMenu" type="Control" unique_id=901826458]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="." unique_id=1828339862]
material = SubResource("ShaderMaterial_balatro")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=931228268]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1588465980]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="TextureRect" parent="CenterContainer/VBoxContainer" unique_id=1015586626]
custom_minimum_size = Vector2(590, 415)
layout_mode = 2
texture = ExtResource("4_sjck8")
expand_mode = 0
stretch_mode = 5

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1395523166]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "Digital Edition"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1722085610]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer" unique_id=2076280486]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer" unique_id=1724517518]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer" unique_id=717434322]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer" unique_id=1756734278]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer" unique_id=2107387151]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Quit"

[node name="VersionLabel" type="Label" parent="." unique_id=702215947]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 200.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "v0.1.0"
